<resources>
    <string name="app_name" translatable="false">idTech4A++</string>
    <string name="app_title" translatable="false">idTech4A++</string>
    <string name="menu_settings">Settings</string>
    <string name="config_editor_name">Configure Editor</string>
    <string name="key_config_page_name">OnScreen Button Configure</string>
    <string name="commandline">Commandline:</string>
    <string name="game_working_directory">Game working directory:</string>
    <string name="chooser">Chooser</string>
    <string name="disable_lighting">Disable lighting(r_noLight)</string>
    <string name="use_dxt_textures_tegra_only_others_no_effect">Use DXT textures (tegra only, others - no effect)</string>
    <string name="use_etc1_or_rgba4444_compression">Use ETC1 (or RGBA4444) compression</string>
    <string name="clear_vertex_buffer_cvar_harm_r_clearvertexbuffer">Clear vertex buffer(harm_r_clearVertexBuffer)</string>
    <string name="use_etc1_or_rgba4444_cache">Use ETC1 (or RGBA4444) cache</string>
    <string name="don_t_clear_and_do_nothing">Do nothing</string>
    <string name="it_is_default_original_graphics_maybe_and_out_of_memory_lead_to_crash_with_flash_screen">Default original, it maybe cause crash with out of memory</string>
    <string name="force_clear_vertex_buffer_on_every_end_frame">Free VBO on every frame</string>
    <string name="if_graphics_out_of_memory_and_crash_suggest_to_force_clear_vertex_buffer">Suggest to free/delete VBO if graphics crash with out of memory</string>
    <string name="force_delete_vertex_buffer_on_every_end_frame">Free and delete VBO on every frame</string>
    <string name="also_like_2nd_and_delete_vbo_handle_maybe_slower_but_memory_safer">Also like 2nd, and delete VBO handle, maybe slower but memory safer</string>
    <string name="game_cvar_fs_game">Game</string>
    <string name="doom_iii">DOOM III</string>
    <string name="doom3_resurrection_of_evil_d3xp">DOOM3:Resurrection of Evil</string>
    <string name="classic_doom_cdoom">Classic DOOM</string>
    <string name="doom3_bfg_the_lost_mission_d3le">DOOM3-BFG:The Lost Mission</string>
    <string name="rivensin_rivensin">Rivensin</string>
    <string name="hardcorps_hardcorps">Hardcorps</string>
    <string name="quake_iv_q4base">Quake IV</string>
    <string name="prey_preybase">Prey</string>
    <string name="user_mod">User mod</string>
    <string name="input_your_mod_folder_name">Mod folder name</string>
    <string name="gamelib">GameLib</string>
    <string name="multi_threading">Multi-threading</string>
    <string name="light_model_cvar_harm_r_lightmodel">Lighting model(harm_r_lightingModel)</string>
    <string name="phong">Phong</string>
    <string name="blinn_phong">Blinn-Phong</string>
    <string name="specular_exponent_cvar_harm_r_specularexponent">Phong Specular exponent(harm_r_specularExponent):</string>
    <string name="specular_exponent_in_interaction_light_model_default_is_4_0">Phong specular exponent</string>
    <string name="sound">Sound(s_driver)</string>
    <string name="load_quicksave_when_start_game">Load QuickSave when start game</string>
    <string name="note_gamepads_keyboards_must_be_configured_in_game_like_on_pc_not_here">Note: Gamepads/Keyboards must be configured in-game (like on PC), not here</string>
    <string name="configure_on_screen_controls">Configure on-screen controls</string>
    <string name="on_screen_button_setting">On-screen button setting</string>
    <string name="setup_on_screen_button_theme">Setup on-screen button theme</string>
    <string name="smooth_joystick">Smooth joystick</string>
    <string name="unfixed_joystick">Unfixed joystick</string>
    <string name="map_volume_keys">Map volume keys</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="enable_gyroscope">Enable gyroscope</string>
    <string name="x_axis_sensitivity">X-Axis sensitivity</string>
    <string name="y_axis_sensitivity">Y-Axis sensitivity</string>
    <string name="x_axis_sensitivity_of_gyroscope">X-Axis sensitivity of gyroscope</string>
    <string name="y_axis_sensitivity_of_gyroscope">Y-Axis sensitivity of gyroscope</string>
    <string name="hide_onscreen_buttons">Hide onscreen buttons</string>
    <string name="using_mouse">Using mouse</string>
    <string name="mouse_settings">Mouse settings:</string>
    <string name="autodetect_mouse">Autodetect mouse</string>
    <string name="mouse_event_device">Mouse event device:</string>
    <string name="mouse_cursor_position">Mouse cursor position:</string>
    <string name="top_left_corner">Top left corner</string>
    <string name="top_right_corner">Top right corner</string>
    <string name="bottom_left_corner">Bottom left corner</string>
    <string name="bottom_right_corner">Bottom right corner</string>
    <string name="multitouch_shoot_left_mouse_button_click_on_a_second_touch">Multitouch shoot (left mouse button click on a second touch)</string>
    <string name="screen_resolution">Screen resolution:</string>
    <string name="normal_1x">Normal (1x)</string>
    <string name="half_0_5x">Half (0.5x)</string>
    <string name="double_2x">Double (2x)</string>
    <string name="custom">Custom</string>
    <string name="_0_auto_using_screen_aspect_ratio">(0 - Auto using screen aspect ratio)</string>
    <string name="msaa_warning_tegra_doesn_t_support_it">MSAA: (Warning, Tegra doesn\'t support it)</string>
    <string name="_1x_none">1x (None)</string>
    <string name="_4x">4x</string>
    <string name="_16x">16x</string>
    <string name="color_bits">Color bits</string>
    <string name="_32bits">32Bits</string>
    <string name="_16bits_rgb565">16Bits(RGB565)</string>
    <string name="_16bits_rgba4444">16Bits(RGBA4444)</string>
    <string name="_16bits_rgba5551">16Bits(RGBA5551)</string>
    <string name="_32bits_rgba1010102">32Bits(RGBA1010102)</string>
    <string name="doom_3">DOOM 3</string>
    <string name="quake_4">Quake 4</string>
    <string name="quake_1">Quake 1</string>
    <string name="quake_2">Quake 2</string>
    <string name="quake_3">Quake 3</string>
    <string name="rtcw">RTCW</string>
    <string name="etw">ETW</string>
    <string name="tdm">Dark mod</string>
    <string name="doom">DOOM</string>
    <string name="prey_2006">Prey(2006)</string>
    <string name="settings">Settings</string>
    <string name="changes">Changes</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="preference">Preference</string>
    <string name="other">Other</string>
    <string name="option">Option</string>
    <string name="save_launcher_settings">Save launcher settings</string>
    <string name="backup_settings">Backup settings</string>
    <string name="restore_settings">Restore settings</string>
    <string name="extract_resource">Extract resource</string>
    <string name="special_cvar_list">Special Cvar list</string>
    <string name="last_runtime_log">Last runtime log</string>
    <string name="debug">DEBUG</string>
    <string name="support_the_developer">Support the developer</string>
    <string name="check_for_update">Check for update</string>
    <string name="reload">Reload</string>
    <string name="save">Save</string>
    <string name="weapon_panel">Weapon panel</string>
    <string name="reset">Reset</string>
    <string name="theme">Theme</string>
    <string name="start_game">Start game</string>
    <string name="toggle_key">Toggle key</string>
    <string name="touch_type">Touch type</string>
    <string name="slider_type">Slider type</string>
    <string name="key_1">Key</string>
    <string name="key_2">Key 2</string>
    <string name="key_3">Key 3</string>
    <string name="screen">Screen</string>
    <string name="hide_navigation_bar">Hide navigation bar</string>
    <string name="hide_navigation_bar_in_game">Hide navigation bar in game</string>
    <string name="hide_ad_bar_in_launcher">Hide ad bar in launcher</string>
    <string name="cover_screen_edges">Cover screen edges</string>
    <string name="cover_screen_edges_in_status_bar">Cover screen edges in status bar</string>
    <string name="game">Game</string>
    <string name="run_background">Run background</string>
    <string name="control_game_state_when_application_in_background">Control game state when application in background</string>
    <string name="map_back_key">Map Back key</string>
    <string name="setup_back_key_function">Setup Back key function</string>
    <string name="clear">Clear</string>
    <string name="update_interval_second_0_disable">Update interval(Second): 0 - Disable</string>
    <string name="if_you_do_not_want_to_debug_memory_usage_status_please_do_not_check_it_because_it_is_a_taking_time_operation">If you do not want to debug memory usage status, please do not enable it!</string>
    <string name="render_memory_status_0_is_disable">Render memory status(0 is disable)</string>
    <string name="no_handle_signals">No handle signals</string>
    <string name="do_not_handle_signals">Do not handle signals</string>
    <string name="last_dalvik_crash_info">Last dalvik crash info</string>
    <string name="translators">Translators</string>
    <string name="scroll_to_top">Top</string>
    <string name="scroll_to_bottom">Bottom</string>
    <string name="doom_3_bfg">DOOM 3 BFG</string>
    <string name="stencil_shadow">Stencil shadow</string>
    <string name="disable">Disable</string>
    <string name="realrtcw">RealRTCW</string>
    <string name="fteqw">FTEQW</string>
    <string name="samtfe">SamTFE</string>
    <string name="samtse">SamTSE</string>
    <string name="xash3d">Xash3D</string>
    <string name="sourceengine">Source Engine</string>
    <string name="input_event_queue">Input event queue</string>
    <string name="choose_input_event_queue_scheme">Choose input event queue scheme</string>
    <string name="filter">Filter</string>
    <string name="experimental">Experimental</string>
    <string name="input">Input</string>
    <string name="shortcut">Shortcut</string>
    <string name="allow_cheats_harm_sv_cheats">Allow cheats(harm_sv_cheats)</string>
    <string name="render_personal_model_shadow_harm_r_stencilshadowpersonal">Render personal model shadow(harm_r_stencilShadowPersonal)</string>
    <string name="blur">Blur</string>
    <string name="shodow_cg_shadows">Shodow(cg_shadows)</string>
    <string name="game_thread">Game thread</string>
    <string name="choose_game_thread_create_scheme">Choose game thread create scheme</string>
    <string name="disable_android_menu_macro_harm_ui_disableandroidmacro_nshow_host_menu_for_create_game_server">Disable `ANDROID` menu macro(harm_ui_disableAndroidMacro)\nShow `HOST` menu for create game server</string>
    <string name="change_game">Change game</string>
    <string name="openja">OpenJA</string>
    <string name="openjo">OpenJO</string>
    <string name="render_global_illumination_harm_r_globalillumination">Render global illumination(harm_r_globalIllumination)</string>
    <string name="name_">Name: </string>
    <string name="value_">Value:</string>
    <string name="input_value">Input value</string>
    <string name="input_name">Input name</string>
    <string name="urbanterror">Q3-UT4</string>
    <string name="download_testing">Download testing</string>
    <string name="openmohaa">OpenMOHAA</string>
    <string name="advance">Advance</string>
    <string name="game_thread_stack_size">Game thread stack memory size(kb)</string>
    <string name="_0_is_unset">0 = unset</string>
    <string name="clean_logcat_files">Clean logcat files</string>
    <string name="qc">QC</string>
    <string name="soft_shadow_r_useShadowMapping">Soft shadow(r_useShadowMapping)</string>
    <string name="lighting_and_shadow_cvars_are_same_as_doom_3_quake_4_prey_2006">Lighting and shadow cvars are same as DOOM 3/Quake 4/Prey(2006)</string>
</resources>