<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/advance"
>

    <PreferenceCategory
        android:key="advance"
        android:title="@string/advance"
    >
        <EditTextPreference
            android:title="@string/game_thread_stack_size"
            android:key="harm_game_thread_stack_size"
            android:persistent="true"
            android:defaultValue="0"
            android:inputType="number"
            android:summary="@string/_0_is_unset"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="experimental"
        android:title="@string/experimental"
        >
        <ListPreference
            android:title="@string/input_event_queue"
            android:key="harm_event_queue"
            android:persistent="true"
            android:defaultValue="0"
            android:summary="@string/choose_input_event_queue_scheme"
            android:entryValues="@array/event_queue_values"
            android:entries="@array/event_queue_labels"
            />
        <ListPreference
            android:title="@string/game_thread"
            android:key="harm_game_thread"
            android:persistent="true"
            android:defaultValue="0"
            android:summary="@string/choose_game_thread_create_scheme"
            android:entryValues="@array/game_thread_values"
            android:entries="@array/game_thread_labels"
            />
    </PreferenceCategory>
    
</PreferenceScreen>
