<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingLeft="10dp"
	android:paddingRight="10dp"
	android:paddingTop="5dp"
	android:paddingBottom="5dp"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="16sp"
			android:text="@string/name_"
			android:textStyle="bold"/>

		<EditText
			android:id="@+id/env_editor_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="16sp"
			android:ems="10"
			android:imeOptions="flagNoExtractUi"
			android:inputType="textNoSuggestions"
			android:hint="@string/input_name"
			android:layout_marginLeft="10dp"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal"
		android:layout_marginTop="5dp">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="left|center_vertical"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="16sp"
			android:text="@string/value_"
			android:textStyle="bold"/>

		<EditText
			android:id="@+id/env_editor_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="16sp"
			android:ems="10"
			android:imeOptions="flagNoExtractUi"
			android:inputType="textNoSuggestions"
			android:hint="@string/input_value"
			android:layout_marginLeft="10dp"
			/>
	</LinearLayout>

</LinearLayout>

